--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,6 @@ path = "tests/lib.rs"
 
 [build-dependencies]
 pulldown-cmark = "0.9.2"
+
+# [patch.crates-io]
+# ord-bitcoincore-rpc = { path = "../ord-rust-bitcoincore-rpc"}
