--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ axum-server = "0.4.0"
 base64 = "0.13.1"
 bech32 = "0.9.1"
 bip39 = "1.0.1"
-bitcoin = { version = "0.29.1", features = ["rand"] }
+bitcoin = { version = "0.29.1", features = ["rand", "base64"] }
 boilerplate = { version = "0.2.3", features = ["axum"] }
 chrono = "0.4.19"
 clap = { version = "3.1.0", features = ["derive"] }
@@ -78,3 +78,6 @@ path = "tests/lib.rs"
 
 [build-dependencies]
 pulldown-cmark = "0.9.2"
+
+# [patch.crates-io]
+# ord-bitcoincore-rpc = { path = "../ord-rust-bitcoincore-rpc"}
